update width to prevent execessive white space

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -110,7 +110,7 @@ header {
     align-items: center;
     justify-content: center;
     width: 110vw;
-    height: 150vh;
+    height: 110vh;
     list-style: none;
     flex-direction: column;
     top: 50%;
